# clip_it

./: .gitignore  AGENT.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/: app-icon.icns
docs/: benchmarks.md
scripts/: generate-update-manifest.py  package-macos.sh  package-windows.ps1
src/: clipboard.rs  config.rs  confirmation.rs  discovery.rs  integration.rs  main.rs  picker.rs  protocol.rs  settings_page.html  settings_ui.rs  transfer.rs  tray.rs  update.rs  windows_shell.rs
