[package]
name = "clip-it"
version = "0.2.0"
edition = "2024"
description = "Small, fast context-menu LAN file transfer"
license = "MIT"

[dependencies]
anyhow = "1.0"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
hostname = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = { version = "0.6", features = ["all"] }
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
walkdir = "2.5"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
